keynotes spacing fix

--- a/src/style/modules/_livekeynotes.scss
+++ b/src/style/modules/_livekeynotes.scss
@@ -12,6 +12,8 @@
     padding: 4rem 0;
     justify-content: space-between;
     flex-direction: row;
+    max-width: 90%;
+    margin: 0 auto;
     .logo {
       margin-top: 0;
       img {
@@ -57,6 +59,7 @@
       }
     }
     @media (max-width: 768px) {
+      max-width: 100%;
       flex-direction: column-reverse;
     }
   }
@@ -70,10 +73,22 @@
 }
 .keynotes-intro {
   padding: 6rem 0;
+  .intro-inner {
+    max-width: 90%;
+    margin: 0 auto;
+    @media (max-width: 768px) {
+      max-width: 100%;
+    }
+  }
 }
 .keynotes-bullets {
   display: flex;
   gap: 1rem;
+  ul li {
+    &:before {
+      content: "";
+    }
+  }
   .stat-section {
     flex: 1;
     color: $dark;
@@ -160,6 +175,11 @@
     .level-bullets {
       padding: 1rem;
       flex: 1;
+      ul li {
+        &:before {
+          content: "";
+        }
+      }
     }
     .level-heading,
     .level-price {
